# bkchaind

./: .gitignore  .gitmodules  README.md  bkchaind.sln
blockchain/: BitcoinAddress.cpp  BitcoinAddress.h  BlockChain.cpp  BlockChain.h  blockchain.vcxproj  blockchain.vcxproj.filters  main.cpp
daemon-patches/: bitcoind.patch
src/: Address.h  AddressOperations.cpp  AddressOperations.h  BitcoinLiveTX.cpp  BitcoinLiveTX.h  BitcoinRPC.cpp  BitcoinRPC.h  BitcoinTX.cpp  BitcoinTX.h  Blocks.cpp  Blocks.h  BroadcastWebsocketServer.hpp  CMakeLists.txt  CacherServer.cpp  CacherServer.h  Database.cpp  Database.h  Hash256.h  ScriptDecoder.cpp  ScriptDecoder.h  Serialization.h  abstractcacherserver.h  bkchaind.vcxproj  bkchaind.vcxproj.filters  dbmodel.txt  httpclientasio.cpp  httpclientasio.h  llvm_serialization.h  lrucache.hpp  main.cpp  varint.h
src/llvm/Support/: DataTypes.h
src/res/: procedures.json
